first draft of empirical seciton

--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -263,6 +263,7 @@ with Crime is crime rate in region $r$, associated with club $c$, on day-of-the-
 	\item different definition of a day: 6:00 AM - 5:59 AM the next day, see Lindo paper
 	\item lags and leads in Gameday see Lindo paper
 	\item estimation sample only until June 2015 see Timo's paper?
+	\item Spieltag fixed effects?
 \end{itemize}
 
 
