comments in background

--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -213,6 +213,10 @@ German football league system, different leagues/divisions
 https://www.dfl.de/en/about/history/
 Bundesliga is an independent body , sperated from the German Football Association (DFL)
 
+%in league 1 and 2; in each 17 home and away games
+%matchplan: grundlage internationale Spiele
+%In die Vorbereitung der Spielpläne für die Bundesliga und die 2. Bundesliga fließen Vorgaben von Kommunen, Sicherheitsorganen, der Zentralen Informationsstelle Sporteinsätze (ZIS), von internationalen Fußballverbänden (FIFA/UEFA), von Fans, Clubs und Stadionbetreibern ein. Neben naheliegenden Einschränkungen wie der Tatsache, dass benachbarte Clubs versetzt zu ihren Heimspielen antreten sollten, müssen u. a. auch Feiertage, parallele Großveranstaltungen (zB Oktoberfest) oder Spieltermine internationaler Wettbewerbe (UEFA Champions League & UEFA Europa League) berücksichtigt werden.
+%https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp
 
 %--------------------------------------------------------------------
 % IDENTIFICATION
