minor: modified specification

--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -317,10 +317,11 @@ GENESIS
 	\end{itemize}
 	\item \textbf{robustness:}
 	\begin{itemize}
-		\item different specification of what are the affected regions, vary radius around stadium which region is affected
+		\item different specification of what are the affected regions, vary radius around stadium which region is affected: at first use only region (gemeinde/Kreis) in which the stadium is located, then play around with radius.
 		\item estimation with Poisson? (many zeros and discrete nature of reports - use number of assaults)
 		\item placebo games?
 		\item control for mass events (see BHR paper)
+		\item drop Nachholspiele
 	\end{itemize}
 \end{itemize}
 
