--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -449,6 +449,34 @@ GENESIS
 \vspace*{\fill}\clearpage
 %--------------------------------------------
 
+
+
+
+%--------------------------------------------
+% Descriptives about soccer matches
+\vspace*{\fill}
+\begin{figure}[H]\centering
+	\caption{Soccer matches}\label{fig_soc_ext:descriptives_mataches_attendance}
+	\includegraphics[width=0.9 \linewidth]{descriptive/soc_ect_desc_soccer_macthes_attendance}	
+	\begin{minipage}{\linewidth}
+		\scriptsize{\emph{Notes:} The figures show key aspects of soccer games in the data set. Panel A shows how the number of matches vary over the course of a week, Panel B plots the distribution of matches over the course of a day, and Panel C shows kernel densities for the number of spectators (in thousand) across the three leagues.\newline \emph{Source:} Own representation with data obtained from kicker.de.}
+	\end{minipage}
+\end{figure}
+\vspace*{\fill}\clearpage
+
+
+
+
+
+
+
+
+
+%--------------------------------------------
+
+
+
+
 % WEATHER MONITORS: histogram of the distance stadium <-> monitor
 \vspace*{\fill}
 \begin{figure}[H]\centering
@@ -557,3 +585,39 @@ GENESIS
 
 
 \end{document}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+%--------------------------------------------
+
+
+%% Attendance across leagues (violin plots)
+%\vspace*{\fill}
+%\begin{figure}[H]\centering
+%	\caption{Attendance across the leagues}\label{fig_soc_ext:violin_attendance_per_league}
+%	\includegraphics[width=0.9 \linewidth]{descriptive/soc_ext_attendance_per_league.pdf}
+%	\begin{minipage}{0.95\linewidth}
+%		\scriptsize{\emph{Notes:} The figure shows the distributions of the number of spectators (in thousand) per league. The white dot represents the median and the thick bar in the center depicts the interquartile range. The median number of viewers are 42,000 for league one, 15,000 for league two, and 5,000 for league three. \newline \emph{Source:} Own representation with data obtained from kicker.de.}
+%	\end{minipage}
+%\end{figure}
+%\vspace*{\fill}\clearpage
